[tool.poetry]
name = "flaskminiproject"
version = "0.1.0"
description = ""
authors = ["Umdoong <umdoongs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.1"
pymysql = "1.1.1"
sqlalchemy = "2.0.37"
flask-sqlalchemy = "3.1.1"
flask-migrate = "4.0.7"
flask-smorest = "0.45.0"
gunicorn = "23.00"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
